--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "set NODE_ENV=production&&node ./bin/www",
-    "dev" : "set NODE_ENV=development&&nodemon ./bin/www"
+    "dev": "set NODE_ENV=development&&nodemon ./bin/www"
   },
   "repository": {
     "type": "git",
@@ -19,5 +19,8 @@
   "homepage": "https://github.com/antPinot/esprex#readme",
   "devDependencies": {
     "nodemon": "^2.0.20"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
   }
 }
