--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "gentls": "^1.0.7"
+    "gentls": "^1.0.7",
+    "pug": "^3.0.2"
   }
 }
